<?xml version="1.0"?>
<package format="2">
  <name>smb_highlevel_controller</name>
  <version>0.1.0</version>
  <description>A high-level controller for the Super Mega Bot</description>
  <maintainer email="sd13535@outlook.com">Sandip Das</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
